--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
 
         <testng.version>6.14.3</testng.version>
         <rest-assured.version>3.1.1</rest-assured.version>
+        <json-path>3.1.1</json-path>
+        <xml-path>3.1.1</xml-path>
 
         <poi-ooxml.version>3.15</poi-ooxml.version>
 
@@ -39,7 +41,7 @@
         <selenium-support.version>2.53.1</selenium-support.version>
 
         <lombok.version>1.18.2</lombok.version>
-        <allure-testng-adaptor>1.5.4</allure-testng-adaptor>
+        <allure-testng>2.7.0</allure-testng>
         <aspectjweaver>1.8.9</aspectjweaver>
 
         <owner-java8>1.0.10</owner-java8>
@@ -59,6 +61,18 @@
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
             <version>${rest-assured.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>json-path</artifactId>
+            <version>${json-path}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>xml-path</artifactId>
+            <version>${xml-path}</version>
         </dependency>
 
         <dependency>
@@ -146,15 +160,23 @@
         </dependency>
 
         <dependency>
-            <groupId>ru.yandex.qatools.allure</groupId>
-            <artifactId>allure-testng-adaptor</artifactId>
-            <version>${allure-testng-adaptor}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>junit</groupId>
-                    <artifactId>junit</artifactId>
-                </exclusion>
-            </exclusions>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>${allure-testng}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-selenide</artifactId>
+            <version>2.7.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-rest-assured</artifactId>
+            <version>2.7.0</version>
         </dependency>
 
         <dependency>
@@ -164,8 +186,6 @@
         </dependency>
 
     </dependencies>
-
-
 
     <build>
         <plugins>
@@ -194,14 +214,14 @@
                     </execution>
                 </executions>
                 <!--<configuration>-->
-                    <!--<filesets>-->
-                        <!--<fileset>-->
-                            <!--<directory>test-output</directory>-->
-                            <!--<directory>target</directory>-->
-                            <!--<directory>build</directory>-->
-                            <!--<directory>video</directory>-->
-                        <!--</fileset>-->
-                    <!--</filesets>-->
+                <!--<filesets>-->
+                <!--<fileset>-->
+                <!--<directory>test-output</directory>-->
+                <!--<directory>target</directory>-->
+                <!--<directory>build</directory>-->
+                <!--<directory>video</directory>-->
+                <!--</fileset>-->
+                <!--</filesets>-->
                 <!--</configuration>-->
             </plugin>
 
@@ -216,12 +236,12 @@
                         -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectjweaver}/aspectjweaver-${aspectjweaver}.jar
                     </argLine>
                     <!--<properties>-->
-                        <!--<property>-->
-                            <!--<name>listener</name>-->
-                            <!--<value>-->
-                                <!--ru.yandex.qatools.allure.testng.AllureTestListener-->
-                            <!--</value>-->
-                        <!--</property>-->
+                    <!--<property>-->
+                    <!--<name>listener</name>-->
+                    <!--<value>-->
+                    <!--ru.yandex.qatools.allure.testng.AllureTestListener-->
+                    <!--</value>-->
+                    <!--</property>-->
                     <!--</properties>-->
                     <suiteXmlFiles>
                         <suiteXmlFile>src/main/resources/suites/${suite}.xml</suiteXmlFile>
@@ -251,10 +271,10 @@
                 <artifactId>allure-maven-plugin</artifactId>
                 <version>2.5</version>
                 <!--<configuration>-->
-                    <!--<resultsDirectory>allure-results</resultsDirectory>-->
-                    <!--<properties>-->
-                        <!--<allure.tests.management.pattern>https://jd.eleks.com/browse/%s</allure.tests.management.pattern>-->
-                    <!--</properties>-->
+                <!--<resultsDirectory>allure-results</resultsDirectory>-->
+                <!--<properties>-->
+                <!--<allure.tests.management.pattern>https://jd.eleks.com/browse/%s</allure.tests.management.pattern>-->
+                <!--</properties>-->
                 <!--</configuration>-->
             </plugin>
         </plugins>
